# OreoBuild

./: .gitignore  CMakeLists.txt  README.md
src/: cli_handler.cpp  cli_handler.hpp  color.cpp  color.hpp  main.cpp
src/core/: build_system.cpp  build_system.hpp  compiler.hpp  compiler_gcc.cpp  config.cpp  config.hpp  dependency_manager.cpp  dependency_manager.hpp  file_utils.cpp  file_utils.hpp  platform.hpp  platform_unix.cpp  thread_pool.cpp  thread_pool.hpp
